deploy/mqtt/02-sa.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  namespace: edgeapi-mqtt
spec:
  type: ClusterIP
  selector:
    app: mosquitto  
  ports:
  - port: 8883
